--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,17 +39,22 @@ dependencies:
   firebase_core: ^3.7.0
   firebase_auth: ^5.3.2
   firebase_ui_auth: ^1.16.0
+  path_provider: ^2.1.5
   cloud_firestore: ^5.4.5
   image_picker: ^1.1.2
   firebase_storage: ^12.3.5
   flutter_spinkit: ^5.2.1
   firebase_ui_database: ^1.5.0
+  file_picker: ^8.1.5
   firebase_database: ^11.1.5
   google_generative_ai: ^0.4.6
+  image: ^4.4.0
   http: ^1.2.2
   flutter_dotenv: ^5.2.1
   parallax_rain: ^1.1.1
   vitality: ^3.0.0
+  mime: ^2.0.0
+  flutter_image_compress: ^2.3.0
   
 
 dev_dependencies:
